k8s/gateway/deployment.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: gateway
  namespace: imageprocessing
  labels:
    app: gateway
    layer: web
spec:
  replicas: 1 #(default: 1)
  minReadySeconds: 0 #(default: 0)
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: imageprocessing/gateway:latest
          imagePullPolicy: Never
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 5  
            periodSeconds: 10        
            timeoutSeconds: 5        
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 20  
            periodSeconds: 10        
            timeoutSeconds: 5        
            failureThreshold: 3
