k8s/gateway/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: gateway
  namespace: imageprocessing
  labels:
    app: gateway
    layer: web
spec:
  containers:
    - name: gateway
      image: imageprocessing/gateway:latest
      imagePullPolicy: Never
