k8s/gateway/service.yml
apiVersion: v1
kind: Service
metadata: 
  name: gateway-service
spec:
  selector:
    app: gateway
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
